--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 logging.level.com.borisperica=debug
 server.port=8081
 brewery.beer-service-host=http://localhost:8080
+spring.artemis.mode=native
+spring.artemis.user=artemis
+spring.artemis.password=simetraehcapa
